sandbox/output
FizzBuzz.java:3: error: cannot find symbol
    private Handler fizzBuzzHandler;
            ^
  symbol:   class Handler
  location: class FizzBuzz
FizzBuzz.java:6: error: cannot find symbol
        this.fizzBuzzHandler = new FizzBuzzHandler(fizzHandler);
                                   ^
  symbol:   class FizzBuzzHandler
  location: class FizzBuzz
FizzBuzz.java:6: error: cannot find symbol
        this.fizzBuzzHandler = new FizzBuzzHandler(fizzHandler);
                                                   ^
  symbol:   variable fizzHandler
  location: class FizzBuzz
3 errors
